--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,8 @@
 
         <nav class="nav">
           <ul class="site-nav">
-            <li><a class="link link-current" href="./index.html">Студія</a></li>
-            <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="link" href="./index.html">Студія</a></li>
+            <li><a class="link link-current" href="./portfolio.html">Портфоліо</a></li>
             <li><a class="link" href="/contact">Контакти</a></li>
           </ul>
           <ul class="contact-link">
