--- a/portfolio.html
+++ b/portfolio.html
@@ -214,7 +214,7 @@
 
     <footer class="page-footer">
       <div class="container footer-flex">
-        <section class="footernav-container">
+        <div class="footernav">
           <a class="logo-link-footer" href="./index.html"
             >Web<span class="logo-footer">Studio</span></a
           >
@@ -238,13 +238,13 @@
               </li>
             </ul>
           </address>
-        </section>
+        </div>
 
         <!-- socialnet -->
 
-        <section class="socialnet">
-          <div class="container">
-            <h2 class="socialnet-title">приєднуйтесь</h2>
+        <div class="socialnet">
+          <div class="footernav-item">
+            <p class="socialnet-title">приєднуйтесь</p>
             <ul class="socialnet-list">
               <li class="socialnet-item">
                 <a href="" class="socialnet-link link">
@@ -278,7 +278,7 @@
               </li>
             </ul>
           </div>
-        </section>
+        </div>
       </div>
     </footer>
   </body>
