--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <nav class="nav">
           <ul class="site-nav">
-            <li><a class="link link-current" href="./index.html">Студія</a></li>
-            <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="link" href="/contact">Контакти</a></li>
+            <li class="hl"><a class="header-link link-current" href="./index.html">Студія</a></li>
+            <li><a class="header-link hl" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="header-link hl" href="/contact">Контакти</a></li>
           </ul>
           <ul class="contact-link">
             <li>
@@ -364,7 +364,7 @@
             >Web<span class="logo-footer">Studio</span></a
           >
           <address>
-            <ul class="link">
+            <ul class="footer-link">
               <li class="maps-link">
                 <a
                   class="maps"
