--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,9 @@
 
         <nav class="nav">
           <ul class="site-nav">
-            <li><a class="link" href="./index.html">Студія</a></li>
-            <li><a class="link link-current" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="link" href="/contact">Контакти</a></li>
+            <li><a class="header-link" href="./index.html">Студія</a></li>
+            <li><a class="header-link link-current" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="header-link" href="/contact">Контакти</a></li>
           </ul>
           <ul class="contact-link">
             <li>
@@ -84,8 +84,8 @@
 
         <div class="container">
           <ul class="list-examples">
-            <li class="examples-box">
-              <a href="">
+            <li class="examples-box link">
+              <a class="examples-link" href="">
                 <img src="./images/portfolio1.jpg" width="370" alt="Проєкт веб-сайту Технокряк" />
                 <div class="examples-item">
                   <h2 class="project-name">Технокряк</h2>
@@ -94,7 +94,7 @@
               </a>
             </li>
             <li class="examples-box">
-              <a href="">
+              <a class="examples-link link" href="">
                 <img
                   src="./images/portfolio2.jpg"
                   width="370"
@@ -108,7 +108,7 @@
               </a>
             </li>
             <li class="examples-box">
-              <a href="">
+              <a class="examples-link link" href="">
                 <img
                   src="./images/portfolio3.jpg"
                   width="370"
@@ -122,7 +122,7 @@
               </a>
             </li>
             <li class="examples-box">
-              <a href="">
+              <a class="examples-link link" href="">
                 <img
                   src="./images/portfolio4.jpg"
                   width="370"
@@ -136,7 +136,7 @@
               </a>
             </li>
             <li class="examples-box">
-              <a href="">
+              <a class="examples-link link" href="">
                 <img
                   src="./images/portfolio5.jpg"
                   width="370"
@@ -150,7 +150,7 @@
               </a>
             </li>
             <li class="examples-box">
-              <a href="">
+              <a class="examples-link link" href="">
                 <img
                   src="./images/portfolio6.jpg"
                   width="370"
@@ -164,7 +164,7 @@
               </a>
             </li>
             <li class="examples-box">
-              <a href="">
+              <a class="examples-link link" href="">
                 <img
                   src="./images/portfolio7.jpg"
                   width="370"
@@ -178,7 +178,7 @@
               </a>
             </li>
             <li class="examples-box">
-              <a href="">
+              <a class="examples-link link" href="">
                 <img
                   src="./images/portfolio8.jpg"
                   width="370"
@@ -192,7 +192,7 @@
               </a>
             </li>
             <li class="examples-box">
-              <a href="">
+              <a class="examples-link link" href="">
                 <img
                   src="./images/portfolio9.jpg"
                   width="370"
@@ -219,7 +219,7 @@
             >Web<span class="logo-footer">Studio</span></a
           >
           <address>
-            <ul class="link">
+            <ul class="footer-link">
               <li class="maps-link">
                 <a
                   class="maps"
